# brew-metrics

./: .gitignore  CLAUDE.md  README.md
brew-metrics/: Dockerfile  docker-compose.yml  pyproject.toml
brew-metrics-test/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
brew-metrics-test/app/: main.py
brew-metrics-test/tests/: test_main.py
brew-metrics/app/: auth.py  constants.py  db.py  dummy_data.py  exports.py  forms.py  main.py  migrate.py  queries.py  schema.sql  secrets.py
brew-metrics/app/routers/: admin.py  admin_brews.py  admin_dossier.py  admin_events.py  admin_survey.py  admin_teams.py  admin_weekend.py  dashboard.py  events.py  metrics.py  participant.py  survey.py  tv.py
brew-metrics/app/static/: style.css
brew-metrics/app/templates/: base.html  dashboard.html  events.html  metrics.html  participant.html  survey.html  tv.html
brew-metrics/app/templates/admin/: brews.html  dossier.html  events.html  login.html  survey.html  teams.html  weekend.html
brew-metrics/db/migrations/: V1__initial_schema.sql  V2__event_round_results.sql  V3__survey_rework.sql
brew-metrics/scripts/: seed_local.py  seed_teams.py
brew-metrics/tests/: conftest.py  test_health.py
brew-metrics/tests/routers/: test_admin.py  test_admin_weekend.py  test_dashboard.py  test_events.py  test_metrics.py  test_participant.py  test_survey.py  test_tv.py
docs/: EVENTS_REWORK.md  SURVEY_REWORK.md  high-level-design.md
terraform/: apprunner.tf  ecr.tf  ecs_express.tf  iam.tf  main.tf  outputs.tf  rds.tf  secrets.tf  terraform.tfvars.example  variables.tf  (+1 more)
