[tool.poetry]
name = "brew-metrics"
version = "0.1.0"
description = "Bachelor party weekend brew tracking and event scoreboard"
authors = []
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.32" }
psycopg2-binary = "^2.9"
boto3 = "^1.35"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
httpx = "^0.27"
pytest = "^8.0"
pytest-asyncio = "^0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
