[tool.poetry]
name = "brew-metrics"
version = "0.1.0"
description = "Weekend competition brew tracking and event scoreboard"
authors = []
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.32" }
jinja2 = "^3.1"
python-multipart = "^0.0.20"
psycopg2-binary = "^2.9"
pyjwt = "^2.9"
boto3 = "^1.35"

[tool.poetry.group.dev.dependencies]
httpx = "^0.27"
pytest = "^8.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
